# FreesmLauncher

./: .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.md  MAINTAINERS.md  PKGBUILD  README.md  README_russian.md  flake.nix
.github/: FUNDING.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: backport.yml  build.yml  commitlint.yml  trigger_builds.yml  trigger_release.yml  update-flake.yml  winget.yml
buildconfig/: Build.spec  BuildConfig.cpp.in  BuildConfig.h
cmake/: MacOSXBundleInfo.plist.in
flatpak/: org.freesmTeam.freesmlauncher.yml
launcher/: Application.cpp  Application.h  CMakeLists.txt  Json.cpp  main.cpp
launcher/filelink/: FileLink.cpp  FileLink.h
launcher/java/: JavaUtils.cpp
launcher/launch/: LaunchTask.cpp
launcher/minecraft/: MinecraftInstance.cpp
launcher/minecraft/auth/steps/: MSAStep.cpp
launcher/modplatform/packwiz/: Packwiz.cpp
launcher/resources/backgrounds/: backgrounds.qrc
launcher/resources/fluent/: README.md  fluent.qrc  index.theme  index.theme.license
launcher/resources/fluent_dark/: README.md  fluent_dark.qrc  index.theme
launcher/ui/: MainWindow.cpp  MainWindow.ui
launcher/ui/dialogs/: ProgressDialog.cpp  ProgressDialog.h  ReloadRequiredDialog.cpp  ReloadRequiredDialog.h  ReloadRequiredDialog.ui
launcher/ui/instanceview/: InstanceView.cpp  InstanceView.h
launcher/ui/pages/global/: AccountListPage.cpp  LauncherPage.cpp  LauncherPage.ui
launcher/ui/themes/: CatPack.cpp  CatPack.h  FreesmLightTheme.cpp  FreesmLightTheme.h  FreesmTheme.cpp  FreesmTheme.h  GruvboxTheme.cpp  GruvboxTheme.h  ThemeManager.cpp  ThemeManager.h
launcher/ui/widgets/: LabeledToolButton.cpp  ThemeCustomizationWidget.cpp  ThemeCustomizationWidget.h  ThemeCustomizationWidget.ui
launcher/updater/prismupdater/: PrismUpdater.cpp
libraries/launcher/: CMakeLists.txt
nix/: README.md  dev.nix  distribution.nix  unwrapped.nix  wrapper.nix
nix/pkg/: default.nix  wrapper.nix
program_info/: CMakeLists.txt  README.md  freesmlauncher.6.scd  freesmlauncher.icns  freesmlauncher.in  freesmlauncher.manifest.in  freesmlauncher.qrc  freesmlauncher.rc.in  genicons.sh  org.freesmTeam.freesmlauncher.desktop.in  org.freesmTeam.freesmlauncher.metainfo.xml.in  org.freesmlauncher.FreesmLauncher.metainfo.xml.in  prismlauncher.manifest.in  prismlauncher.qrc  prismlauncher.rc.in  win_install.nsi.in
tests/: ResourceModel_test.cpp
themes/develop/themes/Freesm-Dark/: README.md  preview.png.license  theme.json  themeStyle.css
